<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <menu />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_one"
            android:icon="@drawable/ic_today"
            android:title="@string/hoy" />
        <item
            android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_registro_alumno"
            android:title="@string/registro_alumno" />
        <item android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_registro_actividades"
            android:title="@string/registro_actividad" />
        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/ic_lista_alumnos"
            android:title="@string/lista_Alumno" />

    </group>





</menu>