<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_ID"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/text_Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Nombre"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/text_Apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ID" />

    <TextView
        android:id="@+id/text_Apellidos"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/text_Fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Nombre" />

    <TextView
        android:id="@+id/text_Fecha"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="76dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Apellidos" />

    <ListView
        android:id="@+id/lw_notas"
        android:layout_width="354dp"
        android:layout_height="307dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Fecha"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:text="@string/actividades"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/lw_notas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Fecha" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/id"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/text_ID"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@+id/text_Nombre"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/apellidos"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/text_Apellidos"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="94dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/fecha_de_nacimiento"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/text_Fecha"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/bt_Actualizar"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="14dp"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Fecha" />
</androidx.constraintlayout.widget.ConstraintLayout>