<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tw_actividad_Id"
        android:layout_width="250dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tw_inicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_inicio"
        android:layout_width="250dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tw_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tw_actividad_Id" />

    <TextView
        android:id="@+id/tw_final"
        android:layout_width="250dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tw_nom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tw_inicio" />

    <TextView
        android:id="@+id/tw_nom"
        android:layout_width="250dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tw_alumno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tw_final" />

    <TextView
        android:id="@+id/tw_alumno"
        android:layout_width="250dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/tw_nom" />

    <ImageView
        android:id="@+id/imW_actividad"
        android:layout_width="326dp"
        android:layout_height="218dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/tw_valoracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/tw_valoracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/escribe_una_nota_o_valoraci_n"
        app:layout_constraintBottom_toTopOf="@+id/bt_nota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/a_adir_nota"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/id_actividad"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/tw_actividad_Id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hora_de_inicio"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/tw_inicio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hora_de_fin"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/tw_final"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/actividad"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/tw_nom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/alumno"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/tw_alumno"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="11dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/imW_actividad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="31dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/tw_valoracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imW_actividad" />

</androidx.constraintlayout.widget.ConstraintLayout>